tests/typing/bad/testfile-constructor2-1.scala
class A { }
class B extends A {
    def m() { var b: B = new B(0) }
}
object Main { def main(args: Array[String]) { } }
